// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignatureContainer Renders 1`] = `
<mapProps(SignatureContainer)
  Container={[Function]}
  email="your.name@telstra.purple.net"
  mobile="+61 111 222 333"
  name="your name"
  pronoun="he/him | she/her | they/them"
  sigType="purple"
  title="Job Title"
  twitter="@myTwitter"
/>
`;

exports[`SignatureContainer Renders with support fields 1`] = `
<mapProps(SignatureContainer)
  Container={[Function]}
  email="your.name@telstra.purple.net"
  mobile="+61 111 222 333"
  name="your name"
  pronoun="he/him | she/her | they/them"
  sigType="support"
  title="Job Title"
  twitter="@myTwitter"
/>
`;

exports[`createContainer returns the right props 1`] = `
Object {
  "Container": undefined,
  "containerProps": Object {
    "CopyRepliesAndForwardsHtml": <withState(withState(withHandlers(mapProps(Button))))
      classAfter="button is-success"
      classBefore="button is-primary"
      onClickHandler={[Function]}
      textAfter="Copied!"
      textBefore="Copy signature"
    />,
    "CopyRepliesAndForwardsText": <withState(withState(withHandlers(mapProps(Button))))
      classAfter="button is-success"
      classBefore="button"
      onClickHandler={[Function]}
      textAfter="Copied!"
      textBefore="Copy text only"
    />,
    "CopySignatureHtml": <withState(withState(withHandlers(mapProps(Button))))
      classAfter="button is-success"
      classBefore="button is-primary"
      onClickHandler={[Function]}
      textAfter="Copied!"
      textBefore="Copy signature"
    />,
    "CopySignatureText": <withState(withState(withHandlers(mapProps(Button))))
      classAfter="button is-success"
      classBefore="button"
      onClickHandler={[Function]}
      textAfter="Copied!"
      textBefore="Copy text only"
    />,
    "signatureProps": Object {
      "brandAnimatedLogo": Object {
        "alt": "Purpose and People animation",
        "link": "https://readifysignatures.blob.core.windows.net/images/Purple_Signature_v1.gif",
      },
      "brandLink": "https://purple.telstra.com/",
      "brandLinkName": "purple.telstra.com",
      "brandLogo": Object {
        "alt": "Telstra Purple",
        "link": "https://readifysignatures.blob.core.windows.net/images/purple-email-logo.png",
      },
      "brandName": "Telstra Purple",
      "email": "your.name@telstra.purple.net",
      "got5Logo": Object {
        "alt": "Got 5",
        "link": "https://readifysignatures.blob.core.windows.net/images/got5-logo.png",
      },
      "mobile": "+61 111 222 333",
      "name": "your name",
      "pronoun": "he/him | she/her | they/them",
      "title": "Job Title",
      "twitter": "@myTwitter",
    },
  },
}
`;

exports[`createContainer returns the right props 2`] = `
Object {
  "Container": undefined,
  "containerProps": Object {
    "CopyRepliesAndForwardsHtml": <withState(withState(withHandlers(mapProps(Button))))
      classAfter="button is-success"
      classBefore="button is-primary"
      onClickHandler={[Function]}
      textAfter="Copied!"
      textBefore="Copy signature"
    />,
    "CopyRepliesAndForwardsText": <withState(withState(withHandlers(mapProps(Button))))
      classAfter="button is-success"
      classBefore="button"
      onClickHandler={[Function]}
      textAfter="Copied!"
      textBefore="Copy text only"
    />,
    "CopySignatureHtml": <withState(withState(withHandlers(mapProps(Button))))
      classAfter="button is-success"
      classBefore="button is-primary"
      onClickHandler={[Function]}
      textAfter="Copied!"
      textBefore="Copy signature"
    />,
    "CopySignatureText": <withState(withState(withHandlers(mapProps(Button))))
      classAfter="button is-success"
      classBefore="button"
      onClickHandler={[Function]}
      textAfter="Copied!"
      textBefore="Copy text only"
    />,
    "signatureProps": Object {
      "brandAnimatedLogo": Object {
        "alt": "Purpose and People animation",
        "link": "https://readifysignatures.blob.core.windows.net/images/Purple_Signature_v1.gif",
      },
      "brandLink": "https://purple.telstra.com/",
      "brandLinkName": "purple.telstra.com",
      "brandLogo": Object {
        "alt": "Telstra Purple",
        "link": "https://readifysignatures.blob.core.windows.net/images/purple-email-logo.png",
      },
      "brandName": "Telstra Purple",
      "email": "your.name@telstra.purple.net",
      "got5Logo": Object {
        "alt": "Got 5",
        "link": "https://readifysignatures.blob.core.windows.net/images/got5-logo.png",
      },
      "mobile": "+61 111 222 333",
      "name": "your name",
      "pronoun": "he/him | she/her | they/them",
      "sigType": "purple",
      "title": "Job Title",
      "twitter": "@myTwitter",
    },
  },
}
`;
